[package]
name = "soroban-timelock"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = { version = "*" }

[dev-dependencies]
soroban-sdk = { version = "*", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true

[build]
target = "wasm32-unknown-unknown"
